тесты и методы - изменения + Appl